package com.innopia.bist.fragment;

import androidx.fragment.app.Fragment;

public class EthernetTestFragment extends Fragment {

    public static EthernetTestFragment newInstance() {
        return new EthernetTestFragment();
    }
}
