package com.innopia.bist;

public interface ILogger {
    void log(String tag, String message);
}