package com.innopia.bist.util;

public interface FocusNavigationHandler {
    int getTargetFocusId(int direction);
}
